configurationmanager instead to alloww settings from azure portal

--- a/Vcrs.Umbraco/App_Data/packages/installed/installedPackages.config
+++ b/Vcrs.Umbraco/App_Data/packages/installed/installedPackages.config
@@ -91,4 +91,98 @@
     <loadcontrol>
     </loadcontrol>
   </package>
+  <package id="3" version="&#xD;&#xA;        1.16.0&#xD;&#xA;      " url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      " name="&#xD;&#xA;        TACDIS E-COM&#xD;&#xA;      " folder="ada60f7d-079e-4750-8640-bd05e962f22f" packagepath="" repositoryGuid="00000000-0000-0000-0000-000000000000" iconUrl="" umbVersion="7.9.2" packageGuid="35f70495-04ff-4b9d-9d4d-812cfefd3b40" hasUpdate="False" enableSkins="False" skinRepoGuid="00000000-0000-0000-0000-000000000000">
+    <license url="http://opensource.org/licenses/MIT">
+        MIT
+      </license>
+    <author url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      ">
+        VCRS AB
+      </author>
+    <readme><![CDATA[Adds TACDIS E-COM functionality to your Umbraco site]]></readme>
+    <actions>
+      <Action runat="install" undo="true" alias="AddLanguageFileKey" language="en" position="end" area="sections" key="vcrs" value="TACDIS E-Com" />
+    </actions>
+    <datatypes>
+    </datatypes>
+    <content nodeId="" loadChildNodes="False">
+    </content>
+    <templates>
+    </templates>
+    <stylesheets>
+    </stylesheets>
+    <documenttypes>
+    </documenttypes>
+    <macros>
+    </macros>
+    <files>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.controller.js</file>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.html</file>
+      <file>/App_Plugins/TACDIS/package.manifest</file>
+      <file>/App_Plugins/TACDIS/vcrs.resource.js</file>
+      <file>/bin/PackageActionsContrib.dll</file>
+      <file>/bin/Vcrs.Core.Client.dll</file>
+      <file>/bin/Vcrs.Plugins.Extensions.dll</file>
+      <file>/bin/Vcrs.Plugins.Umbraco.dll</file>
+      <file>/vcrs_plugin/assets/cities/cities.json</file>
+      <file>/vcrs_plugin/assets/i18n/en.json</file>
+      <file>/vcrs_plugin/assets/i18n/sv.json</file>
+      <file>/vcrs_plugin/assets/styles/app.css</file>
+      <file>/Views/Partials/vcrsServiceBooking.cshtml</file>
+      <file>/Views/Partials/vcrsWheelChange.cshtml</file>
+      <file>/Views/Partials/vcrsWindowRepair.cshtml</file>
+    </files>
+    <languages>
+    </languages>
+    <dictionaryitems>
+    </dictionaryitems>
+    <loadcontrol>
+    </loadcontrol>
+  </package>
+  <package id="4" version="&#xD;&#xA;        1.17.0&#xD;&#xA;      " url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      " name="&#xD;&#xA;        TACDIS E-COM&#xD;&#xA;      " folder="bf4c6c6c-cedc-410a-8277-1dfdca006584" packagepath="" repositoryGuid="00000000-0000-0000-0000-000000000000" iconUrl="" umbVersion="7.9.2" packageGuid="c4e04d3d-5b65-4c11-a4ed-ce6b4e27d6ef" hasUpdate="False" enableSkins="False" skinRepoGuid="00000000-0000-0000-0000-000000000000">
+    <license url="http://opensource.org/licenses/MIT">
+        MIT
+      </license>
+    <author url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      ">
+        VCRS AB
+      </author>
+    <readme><![CDATA[Adds TACDIS E-COM functionality to your Umbraco site]]></readme>
+    <actions>
+      <Action runat="install" undo="true" alias="AddLanguageFileKey" language="en" position="end" area="sections" key="vcrs" value="TACDIS E-Com" />
+    </actions>
+    <datatypes>
+    </datatypes>
+    <content nodeId="" loadChildNodes="False">
+    </content>
+    <templates>
+    </templates>
+    <stylesheets>
+    </stylesheets>
+    <documenttypes>
+    </documenttypes>
+    <macros>
+    </macros>
+    <files>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.controller.js</file>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.html</file>
+      <file>/App_Plugins/TACDIS/package.manifest</file>
+      <file>/App_Plugins/TACDIS/vcrs.resource.js</file>
+      <file>/bin/PackageActionsContrib.dll</file>
+      <file>/bin/Vcrs.Core.Client.dll</file>
+      <file>/bin/Vcrs.Plugins.Extensions.dll</file>
+      <file>/bin/Vcrs.Plugins.Umbraco.dll</file>
+      <file>/vcrs_plugin/assets/cities/cities.json</file>
+      <file>/vcrs_plugin/assets/i18n/en.json</file>
+      <file>/vcrs_plugin/assets/i18n/sv.json</file>
+      <file>/vcrs_plugin/assets/styles/app.css</file>
+      <file>/Views/Partials/vcrsServiceBooking.cshtml</file>
+      <file>/Views/Partials/vcrsWheelChange.cshtml</file>
+      <file>/Views/Partials/vcrsWindowRepair.cshtml</file>
+    </files>
+    <languages>
+    </languages>
+    <dictionaryitems>
+    </dictionaryitems>
+    <loadcontrol>
+    </loadcontrol>
+  </package>
 </packages>
