--- a/Vcrs.Umbraco/packages.config
+++ b/Vcrs.Umbraco/packages.config
@@ -41,9 +41,12 @@
   <package id="semver" version="1.1.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net461" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net461" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net461" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net461" />
   <package id="Umbraco.ModelsBuilder" version="3.0.10" targetFramework="net461" />
   <package id="UmbracoCms" version="7.9.2" targetFramework="net461" />
   <package id="UmbracoCms.Core" version="7.9.2" targetFramework="net461" />
+  <package id="Vcrs.Core.Client" version="1.0.0.21" targetFramework="net461" />
 </packages>
