updated vcrs plugin

--- a/Vcrs.Umbraco/App_Data/packages/installed/installedPackages.config
+++ b/Vcrs.Umbraco/App_Data/packages/installed/installedPackages.config
@@ -185,4 +185,51 @@
     <loadcontrol>
     </loadcontrol>
   </package>
+  <package id="5" version="&#xD;&#xA;        1.18.0&#xD;&#xA;      " url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      " name="&#xD;&#xA;        TACDIS E-COM&#xD;&#xA;      " folder="d3b4e6c0-1692-4c94-ab7b-87cbb98f5a72" packagepath="" repositoryGuid="00000000-0000-0000-0000-000000000000" iconUrl="" umbVersion="7.9.2" packageGuid="665efb64-7aae-4397-ab87-5c071aa9be7d" hasUpdate="False" enableSkins="False" skinRepoGuid="00000000-0000-0000-0000-000000000000">
+    <license url="http://opensource.org/licenses/MIT">
+        MIT
+      </license>
+    <author url="&#xD;&#xA;        https://info-ecom.se.tacdis.com&#xD;&#xA;      ">
+        VCRS AB
+      </author>
+    <readme><![CDATA[Adds TACDIS E-COM functionality to your Umbraco site]]></readme>
+    <actions>
+      <Action runat="install" undo="true" alias="AddLanguageFileKey" language="en" position="end" area="sections" key="vcrs" value="TACDIS E-Com" />
+    </actions>
+    <datatypes>
+    </datatypes>
+    <content nodeId="" loadChildNodes="False">
+    </content>
+    <templates>
+    </templates>
+    <stylesheets>
+    </stylesheets>
+    <documenttypes>
+    </documenttypes>
+    <macros>
+    </macros>
+    <files>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.controller.js</file>
+      <file>/App_Plugins/TACDIS/backoffice/configurationTree/edit.html</file>
+      <file>/App_Plugins/TACDIS/package.manifest</file>
+      <file>/App_Plugins/TACDIS/vcrs.resource.js</file>
+      <file>/bin/PackageActionsContrib.dll</file>
+      <file>/bin/Vcrs.Core.Client.dll</file>
+      <file>/bin/Vcrs.Plugins.Extensions.dll</file>
+      <file>/bin/Vcrs.Plugins.Umbraco.dll</file>
+      <file>/vcrs_plugin/assets/cities/cities.json</file>
+      <file>/vcrs_plugin/assets/i18n/en.json</file>
+      <file>/vcrs_plugin/assets/i18n/sv.json</file>
+      <file>/vcrs_plugin/assets/styles/app.css</file>
+      <file>/Views/Partials/vcrsServiceBooking.cshtml</file>
+      <file>/Views/Partials/vcrsWheelChange.cshtml</file>
+      <file>/Views/Partials/vcrsWindowRepair.cshtml</file>
+    </files>
+    <languages>
+    </languages>
+    <dictionaryitems>
+    </dictionaryitems>
+    <loadcontrol>
+    </loadcontrol>
+  </package>
 </packages>
