--- a/Vcrs.Umbraco/Web.config
+++ b/Vcrs.Umbraco/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="microsoft.scripting" type="Microsoft.Scripting.Hosting.Configuration.Section, Microsoft.Scripting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="false" />
@@ -49,16 +49,16 @@
     <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
-    <add key="vcrs:ServiceUrl" value="" />
-    <add key="vcrs:ResourceUrl" value="" />
-    <add key="vcrs:ApiKey" value="" />
+    <add key="vcrs:ServiceUrl" value="https://ecomm-tst.se.tacdis.com" />
+    <add key="vcrs:ResourceUrl" value="https://stgtstecom.blob.core.windows.net/plugin" />
+    <add key="vcrs:ApiKey" value="fd4d8fceec93463a92659ed2157b66e6" />
     <add key="vcrs:TenantId" value="dealer1" />
     <add key="vcrs:ProxyUrl" value="/proxy/" />
     <add key="vcrs:CacheExpirationTime" value="5" />
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
-    <add name="umbracoDbDSN" connectionString="Server=tcp:sqlsrv-tst-ecom.database.windows.net,1433;Database=umbraco;User ID=tacdis@sqlsrv-tst-ecom;Password=" providerName="System.Data.SqlClient" />
+    <add name="umbracoDbDSN" connectionString="Server=tcp:sqlsrv-tst-ecom.database.windows.net,1433;Database=umbraco;User ID=tacdis@sqlsrv-tst-ecom;Password=rkiq4=jop" providerName="System.Data.SqlClient" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
   <system.data>
