--- a/Vcrs.Umbraco/packages.config
+++ b/Vcrs.Umbraco/packages.config
@@ -28,6 +28,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net461" />
@@ -47,6 +48,5 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net461" />
   <package id="Umbraco.ModelsBuilder" version="3.0.10" targetFramework="net461" />
   <package id="UmbracoCms" version="7.9.2" targetFramework="net461" />
-  <package id="UmbracoCms.Core" version="7.9.2" targetFramework="net461" />
-  <package id="Vcrs.Core.Client" version="1.0.0.21" targetFramework="net461" />
+  <package id="UmbracoCms.Core" version="7.9.2" targetFramework="net461" />  
 </packages>
