--- a/Vcrs.Umbraco/Web.config
+++ b/Vcrs.Umbraco/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="microsoft.scripting" type="Microsoft.Scripting.Hosting.Configuration.Section, Microsoft.Scripting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="false" />
@@ -55,6 +55,10 @@
     <add key="vcrs:TenantId" value="dealer1" />
     <add key="vcrs:ProxyUrl" value="/proxy/" />
     <add key="vcrs:CacheExpirationTime" value="5" />
+    <add key="vcrs:TenantId2" value="dealer1no" />
+    <add key="vcrs:ProxyUrl2" value="/proxyno/" />
+    <add key="vcrs:TenantId3" value="" />
+    <add key="vcrs:ProxyUrl3" value="" />
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
