added ip restrictions

--- a/Vcrs.Umbraco/Web.config
+++ b/Vcrs.Umbraco/Web.config
@@ -313,12 +313,41 @@
         <remove name="X-Powered-By" />
       </customHeaders>
     </httpProtocol>
-    <!-- Increase the default upload file size limit -->
+    
     <security>
+      <!-- Increase the default upload file size limit -->
       <requestFiltering>
         <requestLimits maxAllowedContentLength="52428800" />
       </requestFiltering>
+      <!-- IP Whitelist-->
+      <ipSecurity allowUnlisted="false">
+        <clear />
+        <!-- localhost - for dev/test/build -->
+        <add ipAddress="127.0.0.1" allowed="true" />
+        <!-- some offices -->
+        <add ipAddress="212.181.101.51" allowed="true" /> <!-- VCC -->
+        <add ipAddress="212.181.101.52" allowed="true" /> <!-- VCC -->
+        <add ipAddress="176.10.221.218" allowed="true" />
+        <add ipAddress="130.211.56.243" allowed="true" />
+        <add ipAddress="104.155.37.195" allowed="true" />
+        <add ipAddress="130.211.84.104" allowed="true" />
+        <add ipAddress="146.66.236.58" allowed="true" />
+        <add ipAddress="212.247.53.120" allowed="true" subnetMask="255.255.255.248" /> <!-- Stendahls -->
+        <add ipAddress="212.247.64.0" allowed="true" subnetMask="255.255.255.254" /> <!-- Stendahls -->
+        <add ipAddress="212.247.65.244" allowed="true" /> <!-- Stendahls -->
+        <add ipAddress="194.44.220.58" allowed="true"/> <!-- BBH -->
+        
+        <!-- and another -->
+        <add ipAddress="81.231.107.63" allowed="true"/>
+        <add ipAddress="81.229.72.104" allowed="true"/>
+        <add ipAddress="172.27.127.42" allowed="true"/>
+        <add ipAddress="212.181.101.8" allowed="true"/>
+        <add ipAddress="194.88.255.225" allowed="true"/> <!-- Dealer network -->
+        <add ipAddress="194.1.212.225" allowed="true"  subnetMask="255.255.255.0" /> <!-- Bilia network -->
+        
+      </ipSecurity>
     </security>
+    
     <!--
       If you wish to use IIS rewrite rules, see the documentation here: 
       https://our.umbraco.org/documentation/Reference/Routing/IISRewriteRules
