--- a/Vcrs.Umbraco/Web.config
+++ b/Vcrs.Umbraco/Web.config
@@ -49,9 +49,9 @@
     <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
-    <add key="vcrs:ServiceUrl" value="https://ecomm-tst.se.tacdis.com" />
-    <add key="vcrs:ResourceUrl" value="https://stgtstecom.blob.core.windows.net/plugin" />
-    <add key="vcrs:ApiKey" value="fd4d8fceec93463a92659ed2157b66e6" />
+    <add key="vcrs:ServiceUrl" value="" />
+    <add key="vcrs:ResourceUrl" value="" />
+    <add key="vcrs:ApiKey" value="" />
     <add key="vcrs:TenantId" value="dealer1" />
     <add key="vcrs:ProxyUrl" value="/proxy/" />
     <add key="vcrs:CacheExpirationTime" value="5" />
